k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: ghcr.io/xavier-tame/simple-bank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
